PORTAL-891_bug-fix: increase popup z-index, refactoring

--- a/skin/classic/src/main/sass/_common.scss
+++ b/skin/classic/src/main/sass/_common.scss
@@ -5166,7 +5166,7 @@ table {
   position: absolute;
   display: block;
   float: left;
-  z-index: 150;
+  z-index: 160;
 
   .dropdown-menu {
     position: relative;
